# dagger-test

./: dagger.json  pyproject.toml  ruff.toml
dagger/src/main/: __init__.py
src/dagger_test/: __init__.py
tests/: test_calc.py
